# EventSystemTemplate

./: .gitignore  CMakeLists.txt  Event.h  EventSystem.c  LICENSE  README.md  cmake_config.h.in  main.c
Docs/: AddingEvents.md
events/: KeyEvent.h  KeyboardEvent.h  MouseEvent.h  WindowEvent.h
include/: BufferPair.h  Event.h  EventBuffer.h  EventListener.h  EventSystem.h  vec.h
scripts/: generate_event_categories.sh  generate_event_datas.sh  generate_event_includes.bat  generate_event_includes.sh  generate_event_types.bat  generate_event_types.sh
scripts/batch_utils/: lowercase.bat  setvar.bat  uppercase.bat
src/: BufferPair.c  EventBuffer.c  EventListener.c  EventSystem.c  main.c
